added new project endpoints
